feat: add salesman user
