# src/entities/user.ts
@@ -2,10 +2,13 @@ import {
   Column,
   CreateDateColumn,
   Entity,
+  JoinColumn,
+  OneToOne,
   PrimaryGeneratedColumn,
   UpdateDateColumn,
 } from 'typeorm';
 import { v4 as uuid } from 'uuid';
+import { Salesman } from './salesman';
 
 @Entity('users')
 export class User {
@@ -27,6 +30,16 @@ export class User {
   @Column()
   is_admin: boolean;
 
+  @Column()
+  is_salesman: boolean;
+
+  @OneToOne(() => Salesman)
+  @JoinColumn({ name: 'salesman_id' })
+  salesman: Salesman;
+
+  @Column({ nullable: true })
+  salesman_id: string;
+
   @CreateDateColumn()
   created_at: Date;
 
@@ -42,11 +55,13 @@ export class User {
 
 export interface IUser {
   id?: string;
+  salesman_id?: string;
   name?: string;
   email?: string;
   role?: string;
   password?: string;
   is_admin?: boolean;
+  is_salesman?: boolean;
   created_at?: Date;
   updated_at?: Date;
 }
