# src/swagger.json
@@ -1448,6 +1448,12 @@
       "User": {
         "type": "object",
         "properties": {
+          "id": {
+            "type": "string"
+          },
+          "salesman_id": {
+            "type": "string"
+          },
           "name": {
             "type": "string"
           },
